# ComputerVisionCXX

./: .gitignore  README.md
Examples/VirtualPainting/: CMakeLists.txt  License.txt  main.cpp
Examples/VirtualPainting/Color/: Color.cpp  Color.h
Examples/VirtualPainting/ContourDetection/: ContourDetection.cpp  ContourDetection.h
Examples/VirtualPainting/Draw/: Draw.cpp  Draw.h
Tutorial/CVOpencvYoutube/: CMakeLists.txt  main.cpp
Tutorial/CVOpencvYoutube/chapter_1/: Chapter1.cpp  Chapter1.h
Tutorial/CVOpencvYoutube/chapter_2/: Chapter2.cpp  Chapter2.h
Tutorial/CVOpencvYoutube/chapter_3/: Chapter3.cpp  Chapter3.h
Tutorial/CVOpencvYoutube/chapter_4/: Chapter4.cpp  Chapter4.h
Tutorial/CVOpencvYoutube/chapter_5/: Chapter5.cpp  Chapter5.h
Tutorial/CVOpencvYoutube/chapter_6/: Chapter6.cpp  Chapter6.h
Tutorial/CVOpencvYoutube/chapter_7/: Chapter7.cpp  Chapter7.h
Tutorial/CVOpencvYoutube/chapter_8/: Chapter8.cpp  Chapter8.h
